# ShardSafe

./: .gitignore  README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/authority/: centrality.rs  graph.rs  metrics.rs  mod.rs  reputation.rs  state_machine.rs
src-tauri/src/consensus/: mod.rs  validation.rs  voting.rs
src-tauri/src/crypto/: encryption.rs  hashing.rs  keys.rs  mod.rs
src-tauri/src/files/: chunker.rs  erasure.rs  manifest.rs  mod.rs
src-tauri/src/network/: authority_node.rs  behaviour.rs  mod.rs  node.rs  protocol.rs
src-tauri/src/schema/: codec.rs  expr.rs  mod.rs  rules.rs  types.rs  validation.rs
src-tauri/src/storage/: chunks.rs  mod.rs
