[package]
name = "p2p-storage"
version = "0.1.0"
description = "Zero-Trust P2P Distributed Storage System"
authors = ["Nathan G <ndg8743@gmail.com>"]
edition = "2021"

[lib]
name = "p2p_storage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# P2P Networking
libp2p = { version = "0.54", features = [
    "tokio",
    "noise",
    "yamux",
    "quic",
    "kad",
    "gossipsub",
    "request-response",
    "identify",
    "ping",
    "dns",
    "tcp",
    "macros",
    "cbor"
]}

# Cryptography
chacha20poly1305 = "0.10"
blake3 = "1.5"
argon2 = "0.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }

# Erasure Coding
reed-solomon-simd = "3.0"

# Local Storage
sled = "0.34"

# Serialization
bincode = "1.3"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
base64 = "0.22"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.24.0"
